stylesheet.css
/*Draft stylesheet for Codecademy, Advanced JavaScript Coders, Game Month Memory Game*/

html {
	background-color: #D2D2D2;
}

body {
	width: 1000px;
	position: absolute;
	left: 50%;
	margin-left: -500px;
}

#game_title_wrapper {
	width: 1000px;
	background-color: #151B1F;
	height: 45px;
	border-style: solid;
	border-width: 2px;
	border-radius: 10px;
}

#game_title {
	text-align: center;
	margin-top: 5px;
	font-family: "Lobster","Helvetica Neue",Helvetica,Arial,sans-serif;
	font-size: 25px;
	color: #EEEEEE;
}

#game_frame {
	width: 993px;
	height: 600px; /*550*/
	margin-top: 3px;
	border-style: ridge;
	border-width: 6px;
	border-radius: 10px;
}

#game_board_frame {
	margin-top: 20px;
	margin-right: 20px;
	width: 750px;
	height: 500px;
	position: absolute;
	left: 220px;
	border-style: groove;
	border-width: 3px;
	border-radius: 10px;
	padding: 5px;

	
}

div.card_frame {
	width: 114px;
	height: 114px;
	display: inline;
	margin-left: 3px;
}

div.card_frame img {
	border: 2px solid #33CCCC;
	border-radius: 100%;
}

div.card_frame a:hover img {
	border: 2px solid #3333FF;
}

div.game_board_spacer {
	height: 3px;
	width: 100%;
}

#game_info_frame {
	position: absolute;
	width: 170px;
	height: 430px;
	margin-left: 10px;
	margin-top: 10px;
	padding: 5px;
}

div.player_frame {
	width: 160px;
	height: 90px;
	border-style: groove;
	border-width: 3px;
	border-radius: 10px;
	visibility: visible;
	margin-top: 10px;
	padding: 3px;
}

#control_frame {
	position: absolute;
	width: 170px;
	height: 60px;
	top: 470px;
	margin-left: 10px;
	margin-top: 10px;
	padding: 5px;
}

#control_frame button {
	width: 80px;
	height: 30px;
	font-size: 16px;
	font-family: Helvetica,Arial,sans-serif;
	margin-top: 20px;
}

#clock div{
	display:inline;
}

